package elevator.components;

public enum Direction {
    UP, DOWN, IDLE
}
